Part 4.3: apufunktioita ja yksikkötestejä, step1 done

--- a/osa4/package.json
+++ b/osa4/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --verbose",
     "dev": "nodemon index.js"
   },
   "author": "Timo Viipuri",
   "license": "ISC",
   "devDependencies": {
+    "jest": "^25.3.0",
     "nodemon": "^2.0.3"
   },
   "dependencies": {
@@ -17,5 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.9.9"
+  },
+  "jest": {
+    "testEnvironment": "node"
   }
 }
