--- a/osa4/package.json
+++ b/osa4/package.json
@@ -16,12 +16,14 @@
     "supertest": "^4.0.2"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
-    "mongoose": "^5.9.9"
+    "mongoose": "^5.9.9",
+    "mongoose-unique-validator": "^2.0.3"
   },
   "jest": {
     "testEnvironment": "node"
