--- a/osa5/package.json
+++ b/osa5/package.json
@@ -14,7 +14,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "eslint": "eslint ."
+    "eslint": "eslint .",
+    "cypress:open": "cypress open"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,6 +36,8 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
+    "cypress": "^4.4.1",
+    "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-jest": "^23.8.2",
     "typescript": "^3.8.3"
