--- a/osa7/bloglist/package.json
+++ b/osa7/bloglist/package.json
@@ -7,6 +7,7 @@
     "axios": "^0.19.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.3.1",
     "redux": "^4.0.5"
   },
