--- a/osa7/bloglist/package.json
+++ b/osa7/bloglist/package.json
@@ -9,7 +9,8 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.2.1",
     "react-scripts": "3.3.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +44,7 @@
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-flowtype": "^3.13.0",
     "eslint-plugin-jest": "^23.8.2",
+    "redux-devtools-extension": "^2.13.8",
     "typescript": "^3.8.3"
   }
 }
