--- a/osa8/backend/package.json
+++ b/osa8/backend/package.json
@@ -5,11 +5,13 @@
   "main": "index.js",
   "scripts": {
     "dev": "NODE_ENV=development nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.8.1",
     "nodemon": "^2.0.4"
   },
   "dependencies": {
