--- a/osa8/backend/package.json
+++ b/osa8/backend/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "apollo-server": "^2.17.0",
-    "graphql": "^15.3.0"
+    "graphql": "^15.3.0",
+    "uuid": "^8.3.0"
   }
 }
