--- a/osa8/library-backend/package.json
+++ b/osa8/library-backend/package.json
@@ -16,7 +16,10 @@
   },
   "dependencies": {
     "apollo-server": "^2.17.0",
+    "dotenv": "^8.2.0",
     "graphql": "^15.3.0",
+    "mongoose": "^5.10.4",
+    "mongoose-unique-validator": "^2.0.3",
     "uuid": "^8.3.0"
   }
 }
