--- a/osa9/bmiCalculator/package.json
+++ b/osa9/bmiCalculator/package.json
@@ -5,11 +5,15 @@
   "main": "bmiCalculator.ts",
   "scripts": {
     "calculateBmi": "ts-node bmiCalculator.ts",
+    "calculateExercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.1.0",
+    "@typescript-eslint/parser": "^4.1.0",
+    "eslint": "^7.9.0",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   }
