--- a/osa9/bmiCalculator/package.json
+++ b/osa9/bmiCalculator/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "bmiCalculator.ts",
   "scripts": {
+    "start": "ts-node hello.ts",
+    "dev": "ts-node-dev hello.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,11 +13,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.8",
     "@types/node": "^14.10.1",
     "@typescript-eslint/eslint-plugin": "^4.1.0",
     "@typescript-eslint/parser": "^4.1.0",
     "eslint": "^7.9.0",
     "ts-node": "^9.0.0",
+    "ts-node-dev": "^1.0.0-pre.62",
     "typescript": "^4.0.2"
+  },
+  "dependencies": {
+    "express": "^4.17.1"
   }
 }
