--- a/osa9/bmiCalculator/package.json
+++ b/osa9/bmiCalculator/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev hello.ts",
     "calculateBmi": "ts-node bmiCalculator.ts",
     "calculateExercises": "ts-node exerciseCalculator.ts",
+    "lint": "eslint --ext .ts .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,8 +16,8 @@
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/node": "^14.10.1",
-    "@typescript-eslint/eslint-plugin": "^4.1.0",
-    "@typescript-eslint/parser": "^4.1.0",
+    "@typescript-eslint/eslint-plugin": "^4.1.1",
+    "@typescript-eslint/parser": "^4.1.1",
     "eslint": "^7.9.0",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.62",
