--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.7",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "typescript": "^4.0.2"
   },
