--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -2,12 +2,12 @@
   "name": "patientorbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "src/index.ts",
   "scripts": {
     "tsc": "tsc",
-    "dev": "ts-node-dev index.ts",
+    "dev": "ts-node-dev src/index.ts",
     "start": "node build/index.js",
-    "lint": "eslint --ext .ts .",
+    "lint": "eslint --ext .ts src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
