--- a/osa9/patientorBackend/package.json
+++ b/osa9/patientorBackend/package.json
@@ -14,9 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/cors": "^2.8.7",
+    "@types/uuid": "^8.3.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
